# turtle-mcp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
agents/: README.md  roster.md
agents/ada/: AGENT.md
agents/alberti/: AGENT.md
agents/botticelli/: AGENT.md
agents/brunelleschi/: AGENT.md
agents/charles/: AGENT.md
agents/donatello/: AGENT.md
agents/galileo/: AGENT.md
agents/grace/: AGENT.md
agents/hedy/: AGENT.md
agents/larry/: AGENT.md
agents/leonardo/: AGENT.md
agents/linus/: AGENT.md
agents/margaret/: AGENT.md
agents/michelangelo/: AGENT.md
agents/opencode/: api.md  arquitectura.md  backend.md  consejo.md  frontend.md  investigador.md  orquestador.md  qa.md  rapido.md  revision.md  sdd.md  seguridad.md  seo.md  vision.md
agents/pacioli/: AGENT.md
agents/raphael/: AGENT.md
agents/roy/: AGENT.md
agents/vasari/: AGENT.md
agents/vera/: AGENT.md
crates/turtle-cli/: Cargo.toml
crates/turtle-cli/src/: hook.rs  main.rs  modelos.rs  perfil.rs  setup.rs  speclint.rs  statusline.rs  sync.rs
crates/turtle-core/: Cargo.toml
crates/turtle-core/src/: agent.rs  checkpoint.rs  event.rs  lib.rs  memory.rs  message.rs  relation.rs  session.rs  skill.rs  spec_lint.rs  strings.rs
crates/turtle-data/: Cargo.toml
crates/turtle-data/src/: lib.rs
crates/turtle-embed/: Cargo.toml
crates/turtle-embed/src/: lib.rs
crates/turtle-mcp/: Cargo.toml
crates/turtle-mcp/src/: lib.rs
crates/turtle-service/: Cargo.toml
crates/turtle-service/seeds/: gh-cli.md  ponytail.md  turtle-protocol.md
crates/turtle-service/src/: lib.rs  scan.rs  seeds.rs
crates/turtle-usage/: Cargo.toml
examples/: mvp_tokens_agentes.sh
skills/: catalog.md
skills/accessibility-wcag/: SKILL.md
skills/agent-orchestration/: SKILL.md
skills/backend-api-design/: SKILL.md
skills/backend-data-modeling/: SKILL.md
skills/backend-observability/: SKILL.md
skills/backend-performance/: SKILL.md
skills/blossom-carousel/: SKILL.md
skills/browser-qa/: SKILL.md
skills/commit-hygiene/: SKILL.md
skills/discovery-intake/: SKILL.md
skills/frontend-component-patterns/: SKILL.md
skills/geo-seo/: SKILL.md
skills/gh-cli/: SKILL.md
skills/glosario-vivo/: SKILL.md
skills/llm-council/: SKILL.md
skills/pedido-claro/: SKILL.md
skills/ponytail/: SKILL.md
skills/reporte-comprensible/: SKILL.md
skills/sdd-flow/: SKILL.md
skills/secure-by-default/: SKILL.md
skills/security-authn-authz/: SKILL.md
skills/security-owasp/: SKILL.md
skills/security-secrets/: SKILL.md
skills/security-supply-chain/: SKILL.md
skills/turtle-protocol/: SKILL.md
skills/ui-ux-pro-max/: SKILL.md
(+1 files in other folders)
