[package]
name = "turtle-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Cliente HTTP mínimo, sin TLS: Ollama habla HTTP en localhost, así evitamos arrastrar ring/openssl
# y el cross-compile a musl (release) se mantiene simple. Embeddings 100% locales (RNF-SEG-02).
ureq = { version = "2", default-features = false }
serde_json = "1"
